fix: toogle button layout issue

--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ body.light .control-item {
     cursor: pointer;
     transition: all 0.3s ease;
     align-items: center;
-    padding: 0 4px;
+    padding: 0;
 }
 
 body.dark .language-toggle-label {
@@ -267,7 +267,7 @@ body.dark .language-toggle-label {
     cursor: pointer;
     transition: all 0.3s ease;
     align-items: center;
-    padding: 0 4px;
+    padding: 0;
 }
 
 body.dark .ios-toggle-label {
